--- a/courses/templates/courses/course/list.html
+++ b/courses/templates/courses/course/list.html
@@ -117,7 +117,7 @@ Easy To Take Course Satisfaction Guarantee
 
                 <div class="course-block">
                     <div class="course-img">
-                        <a href="{% url 'course_detail' course.slug %}">
+                        <a class="text-dark" href="{% url 'course_detail' course.slug %}">
                             <img width="348" height="281" data-src="{% static 'edutim/images/courses/course-' %}{% random_int 1 12 %}.jpg" alt="image"
                                 class="img-fluid lazy" />
                         </a>
