--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -102,7 +102,7 @@
                      </li>
                      <li>
                         <span>Email :</span>
-                        <a title="mail@pdhsafety.com" href="mailto:mail@pdhsafety.com">mail@pdhsafety.com</a>
+                        <a class="text-white" title="mail@pdhsafety.com" href="mailto:mail@pdhsafety.com">mail@pdhsafety.com</a>
                      </li>
                   </ul>
                </div>
@@ -156,7 +156,7 @@
          
             <div class="container justify-content-start1">
 
-               <a title="PdhSafety" class="navbar-brand" title="Make Safety Training Happen" href="/" aria-label="Home">
+               <a title="PdhSafety" class="navbar-brand text-dark" title="Make Safety Training Happen" href="/" aria-label="Home">
                   <img src="{% static 'edutim/images/logo100.png' %}" width="100" height="100"
                      alt="Make Safety Training Happen" title="PdhSafety" class="img-fluid" />
                </a>
@@ -164,16 +164,16 @@
 
                <form method="get" action="{% url 'courses_list' %}">
                   <div class="input-group top-search-wrap">
-                     <input type="text" class="form-control rounded-0" id="textQ" name="q"
-                        placeholder="What do you want to learn?" />
+                     <input type="text" class="form-control" id="textQ" name="q"
+                        placeholder="What do you want to learn?" title="Search courses here. " />
                      <div class="input-group-append">
 
-                        <button class="btn btn-light d-none btn-loader" type="button" disabled>
+                        <button title="loading" aria-label="loading" class="btn btn-light d-none btn-loader" type="button" disabled>
                            <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
                            <span class="sr-only">Loading...</span>
                         </button>
 
-                        <button class="btn btn-info rounded-0" type="submit">
+                        <button title="Search" aria-label="Search" class="btn btn-main-2" type="submit">
                            <i class="fa fa-search"></i>
                         </button>
                      </div>
@@ -292,7 +292,7 @@
          <div class="row">
             <div class="col-lg-4 mr-auto col-sm-6 col-md-6">
                <div class="widget footer-widget mb-5 mb-lg-0">
-                  <h6 class="widget-title">About Us</h6>
+                  <span class="widget-title">About Us</span>
                   <p class="mt-3">
                      NYC Construction Safety Training aims to offer quality training that is relevant and useful for the construction industry. These efforts include offering training courses that are essential for achieving success and career outcomes in the construction industry, ensuring that course material is both useful and applicable. We conduct perpetual reviews of training materials to maintain accuracy and relevance, and we are committed to developing a team of high-quality staff and instructors.
                   </p>
@@ -423,7 +423,7 @@
                   <div class="copyright text-lg-center">
                      <p>Copyright © 2021 All rights reserved | NYC Construction Safety Training, LLC</p>
                      <p>
-                        <a class="DEVELOPED BY" title="DEVELOPED BY" href="https://www.linkedin.com/in/shoaibijaz/" target="_blank">DEVELOPED BY SHAH</a>
+                        <a class="text-white small" title="DEVELOPED BY" href="https://www.linkedin.com/in/shoaibijaz/" target="_blank">DEVELOPED BY SHAH</a>
                      </p>
                   </div>
                </div>
@@ -444,6 +444,12 @@
    <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'"
       href="{% static 'edutim/vendors/bicon/css/bicon.min.css' %}" />
 
+      <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'"
+      href="{% static 'edutim/vendors/owl/assets/owl.carousel.min.css' %}" />
+      <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'"
+      href="{% static 'edutim/vendors/owl/assets/owl.theme.default.min.css' %}" />
+
+
    <!-- Main jQuery -->
    <script src="{% static 'edutim/vendors/jquery/jquery.js' %}"></script>
    <!-- Bootstrap 4.5 -->
@@ -453,6 +459,7 @@
    <script defer src="{% static 'edutim/vendors/sweetalert.min.js' %}"></script>
    <script defer src="{% static 'edutim/vendors/handlebars.min.js' %}"></script>
    <script defer src="{% static 'edutim/vendors/jquery.lazy.min.js' %}"></script>
+   <script defer src="{% static 'edutim/vendors/owl/owl.carousel.min.js' %}"></script>
    <script defer src="{% static 'edutim/js/script.js' %}"></script>
 
    <script>
