made image small

--- a/courses/templates/index.html
+++ b/courses/templates/index.html
@@ -30,7 +30,7 @@
 
             <div class="col-xl-5">
                 <div class="banner-img p-5">
-                    <img src="{% static 'edutim/images/banner-8.png' %}" alt="" class="img-fluid">
+                    <img src="{% static 'edutim/images/banner-8.png' %}" width="349" height="255" alt="Construction" title="Benefits of Online Construction Safety Certification" class="img-fluid">
                 </div>
             </div>
         </div> <!-- / .row -->
