stopinex student, teacher

--- a/app_students/templates/student_base.html
+++ b/app_students/templates/student_base.html
@@ -13,7 +13,7 @@
       />
       <meta name="author" content="{% block meta_author %}{% endblock %}" />
       <meta name="keywords" content="{% block meta_keywords %}{% endblock %}" />
-      <meta name="robots" content="all" />
+      <meta name="robots" content="noindex">
 
       <title>{% block title %} {% endblock %} | pdhsafety.com</title>
 
