--- a/app_teachers/templates/teacher_base.html
+++ b/app_teachers/templates/teacher_base.html
@@ -10,7 +10,7 @@
         <meta name="description" content="{% block meta_desc %}pdhsafety.com is an online learning and teaching marketplace for construction industry and other labor industries.{% endblock %}">
         <meta name="author" content="{% block meta_author %}{% endblock %}">
         <meta name="keywords" content="{% block meta_keywords %}{% endblock %}">
-        <meta name="robots" content="all">
+        <meta name="robots" content="noindex">
 
         <title>
             {% block title %} 
