--- a/app_teachers/templates/manage/course/list.html
+++ b/app_teachers/templates/manage/course/list.html
@@ -969,6 +969,7 @@
                         $("#fmFeature textarea[name='outcomes']").summernote({height: 330});
                         $("#fmFeature textarea[name='notes']").summernote({height: 330});
                         $("#fmFeature textarea[name='completion_requirements']").summernote({height: 330});
+                        $("#fmFeature textarea[name='details_long']").summernote({height: 330});
 
                         initForm();
                         Swal.close();
