--- a/app_teachers/templates/manage/course/_features.html
+++ b/app_teachers/templates/manage/course/_features.html
@@ -18,7 +18,9 @@
                         <div class="row">
                             <div class="col-3">
                                 <div class="list-group" id="list-tab" role="tablist">
-                                    <a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">
+                                    <a class="list-group-item list-group-item-action active" id="list-details-list" data-toggle="list" href="#list-details" role="tab" aria-controls="details">
+                                        Description</a>
+                                    <a class="list-group-item list-group-item-action" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">
                                         Certificate</a>
                                     <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">
                                         Learning Outcomes</a>
@@ -38,7 +40,12 @@
                             <div class="col-9">
 
                                 <div class="tab-content" id="nav-tabContent">
-                                    <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
+                                    <div class="tab-pane fade show active" id="list-details" role="tabpanel" aria-labelledby="list-details-list">
+                                        <textarea name="details_long" class="form-control">
+                                            {{ details_long }}
+                                        </textarea>
+                                    </div>
+                                    <div class="tab-pane fade" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
                                         <textarea name="schedule" class="form-control">
                                             {{ schedule }}
                                         </textarea>
