--- a/courses/templates/courses/course/detail.html
+++ b/courses/templates/courses/course/detail.html
@@ -50,29 +50,29 @@
 
         {% if not object.is_free %}
         <div class="d-block d-sm-block d-md-none"
-            style="position: fixed;top:0px;z-index: 111;width: 100%;background: #bfbfbf;">
+            style="position: fixed;top:0px;z-index: 111;width: 100%;background: rgb(67, 67, 67);">
             <div class="course-price-wrapper p-1 px-4">
                 <div class="row">
                     <div class="col-8">
                         <div class="course-price mb-0 mt-1">
 
                             {% if object.is_free %}
-                            <h5 class="mb-0">
-                                <span>
+                            <p class="mb-0 small font-weight-bold text-white">
+                                <span class="text-white">
                                     Price: Free</span>
-                            </h5>
+                                </p>
                             {% elif object.discounted_price > 0 %}
 
-                            <h5 class="mb-0">Price:
-                                <span>${{ object.discounted_price }}</span>
-                                <del class="text-muted">${{ object.price }}</del>
-                            </h5>
+                            <p class="mb-0 small font-weight-bold text-white">Price:
+                                <span class="text-white">${{ object.discounted_price }}</span>
+                                <del class="text-white">${{ object.price }}</del>
+                            </p>
 
                             {% else %}
-                            <h5 class="mb-0">
+                            <p class="mb-0 small font-weight-bold text-white">
                                 Price:
-                                <span>${{ object.price }}</span>
-                            </h5>
+                                <span class="text-white">${{ object.price }}</span>
+                            </p>
                             {% endif %}
 
                         </div>
@@ -81,18 +81,18 @@
                         <div class="buy-btn text-right">
                             {% if object.is_free %}
                             {% if request.user.is_authenticated %}
-                            <a href="javascript:;" class="btn btn-main btn-block link-free-enroll">
+                            <a title="Take Free Course" href="javascript:;" class="btn btn-main-2 btn-block link-free-enroll">
                                 Take Free Course
                             </a>
                             {% else %}
-                            <a href="javascript:;" class="btn btn-main btn-block link-free-auth">
+                            <a title="Enroll Free Course" href="javascript:;" class="btn btn-main-2 btn-block link-free-auth">
                                 Enroll Free Course
                             </a>
                             {% endif %}
 
                             {% else %}
 
-                            <a href="javascript:;" class=" mt-0 btn btn-sm btn-main btn-block link-add-cart"
+                            <a title="Add To Cart" href="javascript:;" class=" mt-0 btn btn-sm btn-main-2 btn-block link-add-cart"
                                 data-subject="{{ subject.title }}" data-json="{{ object|jsonify }}">
                                 Add To Cart
                             </a>
@@ -111,7 +111,7 @@
                 <div class="col-lg-8">
                     <div class="course-single-header white-text">
                         <span class="subheading">{{ subject }}</span>
-                        <h3 class="single-course-title">{{ object.title }}</h3>
+                        <h1 class="single-course-title text-white">{{ object.title }}</h1>
                         <p>{{ object.overview  }}</p>
 
                         <div class="d-flex align-items-center ">
@@ -153,20 +153,23 @@
         <div class="row">
             <div class="col-lg-8">
 
-                <div class="single-course-details mb-5 d-none">
-                    <h4 class="course-title">Description</h4>
-                    <p>
-                        {{ object.overview }}
-                    </p>
+                {% if object.features.first.details_long and object.features.first.details_long.strip %}
+                <div class="single-course-details mb-5">
+                    <div>
+                        {{ object.features.first.details_long  |safe }}
+                    </div>
                 </div>
 
+                {% endif %}
+
                 <div class="single-course-details mb-5">
-                    <h4 class="course-title">Course Modules - ({{object.modules.count}})</h4>
+                    <p class="course-title font-weight-bold text-dark">Course Modules - ({{object.modules.count}})</p>
 
                     {% for m in object.modules.all %}
-                    <div class="card mb-2">
+
+                    <div class="section-module card mb-2 {% if forloop.counter0 > 6 %}d-none{%endif%}">
                         <div class="card-header">
-                            <a class="text-dark font-weight-bold" data-toggle="collapse" href="#collapse{{m.id}}"
+                            <a title="{{ m.title }}" class="text-dark font-weight-bold" data-toggle="collapse" href="#collapse{{m.id}}"
                                 role="button" aria-expanded="false" aria-controls="collapse{{m.id}}">
                                 <i class="fa">{{forloop.counter}})</i>
                                 {{ m.title }}
@@ -179,14 +182,17 @@
                                     {{forloop.counter}}) {{cont.item}}
                                 </li>
                                 {% endfor %}
-
                             </ul>
                         </div>
                     </div>
 
                     {% endfor %}
 
-
+                    {% if object.modules.count > 6%}
+                    <div class="text-center bg-light py-2">
+                        <a title="View More Modules" class="text-primary h4 link-view-more-modules" href="javascript:;">View More Module</a>
+                    </div>
+                    {%endif%}
 
                 </div>
 
@@ -198,9 +204,9 @@
                     </div>
                 </div> {% endcomment %}
 
-                {% if object.features.first.notes %}
+                {% if object.features.first.notes and object.features.first.notes.strip %}
                 <div class="single-course-details mb-5">
-                    <h4 class="course-title">Course Features:</h4>
+                    <p class="course-title font-weight-bold text-dark">Course Features:</p>
                     <div>
                         {{ object.features.first.notes | safe }}
                     </div>
@@ -223,21 +229,23 @@
                 </div>
                 {% endif %}
 
+                {% if object.features.first.outcomes and object.features.first.outcomes.strip %}
                 <div class="single-course-details mb-5">
-                    <h4 class="course-title">
-                        Learning Outcomes:</h4>
+                    <p class="course-title font-weight-bold text-dark">
+                        Learning Outcomes:</p>
                     <div>
                         {{ object.features.first.outcomes  |safe }}
                     </div>
                 </div>
+                {% endif %}
 
-                <div class="single-course-details mb-5 d-none">
+                {% comment %} <div class="single-course-details mb-5 d-none">
                     <h4 class="course-title">
                         Completion Requirements:</h4>
                     <div>
                         {{ object.features.first.completion_requirements  |safe }}
                     </div>
-                </div>
+                </div> {% endcomment %}
 
 
 
@@ -247,27 +255,28 @@
                     <div class="course-single-thumb">
 
                         <img data-src="{% static 'edutim/images/courses/course-' %}{% random_int 1 12 %}.jpg"
-                            width="320" height="278" alt="" class="img-fluid w-100 lazy" />
+                            width="320" height="278" alt="course" class="img-fluid w-100 lazy" />
                         <div class="course-price-wrapper">
                             <div class="course-price">
 
                                 {% if object.is_free %}
-                                <h4>
+                                <h6 class="h1">
                                     <span>
                                         Price: Free</span>
-                                </h4>
+                                </h6>
                                 {% elif object.discounted_price > 0 %}
 
-                                <h4>Price:
+                                <h6 class="h1">
+                                    Price:
                                     <span>${{ object.discounted_price }}</span>
                                     <del class="text-muted">${{ object.price }}</del>
-                                </h4>
+                                </h6>
 
                                 {% else %}
-                                <h4>
+                                <h6 class="h1">
                                     Price:
                                     <span>${{ object.price }}</span>
-                                </h4>
+                                </h6>
                                 {% endif %}
 
                             </div>
@@ -296,17 +305,17 @@
                         </div>
                     </div>
 
-                    <div class="course-widget course-details-info d-none">
+                    {% comment %} <div class="course-widget course-details-info d-none">
                         <h4 class="course-title">Credits </h4>
                         <p>
                             {{ object.features.first.schedule  |safe }}
                         </p>
-                    </div>
+                    </div> {% endcomment %}
 
-                    <div class="course-widget course-details-info d-none">
-                        <h4 class="course-title">This Course Includes</h4>
+                    <div class="course-widget course-details-info">
+                        <p class="course-title font-weight-bold text-dark">This Course Includes</p>
                         <ul>
-                            <li>
+                            {% comment %} <li>
                                 <div class="">
                                     <span>
                                         <i class="fa fa-user"></i>Instructor :</span>
@@ -321,7 +330,7 @@
 
                                     </a>
                                 </div>
-                            </li>
+                            </li> {% endcomment %}
 
                             <li>
                                 <div class="">
@@ -619,6 +628,14 @@
                         'data-src');
 
                     $(this).parent().find(".embed-responsive iframe").attr('src', src);
+                });
+
+                $("div").on("click", '.link-view-more-modules', function (e) {
+                    e.stopPropagation();
+
+                    $(".section-module").removeClass('d-none');
+
+                    $(this).hide();
                 });
 
                 if ('{{request.user.is_authenticated}}' == 'True') {
