--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -14,7 +14,7 @@
    <meta name="keywords" content="{% block meta_keywords %}{% endblock %}" />
    <meta name="robots" content="all" />
 
-   <title>{% block title %} Safety Training and Certification | pdhsafety.com {% endblock %}</title>
+   <title>{% block title %}Top-Quality Online Safety Training Courses | Free & Bulk Discounts | Learn Now! {% endblock %}</title>
 
    <link rel="icon" type="image/png" href="{% static 'edutim/images/logo100.png' %}" />
    <link rel="canonical" href="https://pdhsafety.com{{ request.path }}" />
@@ -415,7 +415,7 @@
                <div class="col-lg-2">
                   <div class="footer-logo">
                      <img data-src="{% static 'edutim/images/logo100.png' %}" width="100" height="100"
-                        alt="NYC Construction Safety Training, LLC" class="lazy img-fluid" />
+                      title="NYC Construction Safety Training, LLC" alt="NYC Construction Safety Training, LLC" class="lazy img-fluid" />
                   </div>
                </div>
                <div class="col-lg-10">
